# dare

./: .gitignore  Cargo.toml  README.md  dare.toml  install.sh
.github/workflows/: release.yml
docs/: dare.pen  design.md
examples/: chat-test.yaml  parallel-showcase-2.yaml  parallel-showcase.yaml  smoke.yaml  todo-api.yaml
migrations/: 001_initial.sql  002_agent_profiles.sql
src/: config.rs  dag.rs  db.rs  executor.rs  gateway.rs  lib.rs  main.rs  message_bus.rs  models.rs  planner.rs  server.rs
src/cli/: config.rs  control.rs  dashboard.rs  init.rs  logs.rs  mod.rs  plan.rs  run.rs  status.rs
templates/: base.html
tests/: api_test.rs
