[package]
name = "dare"
version = "0.1.0"
edition = "2021"
authors = ["Ngonidzashe Mangudya <hi@iamngoni.dev>"]
description = "Multi-agent orchestration for OpenClaw/Claude agents"
repository = "https://github.com/iamngoni/dare"
license = "MIT"
keywords = ["ai", "agents", "orchestration", "openclaw", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
openssl = { version = "0.10", optional = true }
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client (for gateway)
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Crypto (for gateway auth)
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
lazy_static = "1.5"
petgraph = "0.6"  # For DAG operations
tokio-stream = { version = "0.1", features = ["sync"] }
open = "5.3"  # For opening browser

# TUI (optional, for status --watch)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = ["tui", "openssl-vendored"]
tui = ["ratatui", "crossterm"]
openssl-vendored = ["openssl/vendored"]

[dev-dependencies]
tempfile = "3.12"
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde_json = "1.0"

[[bin]]
name = "dare"
path = "src/main.rs"
